[package]
name = "massive-target-dir"
version = "0.1.0"
authors = ["Eric Dattore <eric.dattore@circleci.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4"
rocket_contrib = {version = "0.4", features = ["databases", "diesel_postgres_pool"]}
diesel = "1"
